# rozpoznawanie_wzorcow

./: .gitignore  main.py  pyproject.toml
lab4/: main.ipynb
lab5/: zad_u-net_segmentation.ipynb
lab6/: zad_human_pose_estimation.ipynb
