[project]
name = "rozpoznawanie-wzorcow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "mediapipe>=0.10.14",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "scikit-learn>=1.7.2",
    "tensorflow-cpu>=2.18.0",
    "tf-keras-vis>=0.8.7",
    "torchvision>=0.24.0",
]


